2008-01-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add psx14 to exercise POSIX API specific
	portions of Object Services added to API.
	* psx14/.cvsignore, psx14/Makefile.am, psx14/init.c, psx14/psx14.scn,
	psx14/system.h: New files.

2008-01-29	Jennifer Averett <jennifer.averett@OARcorp.com>

	* psx07/init.c, psx07/system.h: Test cleanup and added testing for
	pthread_attr_[get|set]clock.

2008-01-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxenosys/init.c, psxenosys/psxenosys.scn: Add test for stub
	implementation mprotect().

2008-01-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxcleanup/.cvsignore: New file.

2008-01-18	Jennifer Averett <jennifer.averett@OARcorp.com>

	* psxcleanup/system.h: New file.

2008-01-18	Jennifer Averett <jennifer.averett@OARcorp.com>

	* Makefile.am, configure.ac:
	* psxcleanup/Makefile.am, psxcleanup/psxcleanup.c,
	psxcleanup/psxcleanup.scn: New files.

2008-01-18	Jennifer Averett <jennifer.averett@OARcorp.com>

	* psx01/init.c, psxmsgq01/init.c, psxtimer01/psxtimer.c,
	psxtimer01/psxtimer01.scn, psxtimer02/psxtimer.c:

2007-12-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxsignal01/.cvsignore, psxualarm/.cvsignore: New files.

2007-12-20	Jennifer Averett <jennifer.averett@OARcorp.com>

	* Makefile.am, configure.ac: Added test for ualarm
	* psxualarm/Makefile.am, psxualarm/init.c, psxualarm/psxualarm.scn,
	psxualarm/system.h: New files.

2007-12-19	Jennifer Averett <jennifer.averett@OARcorp.com>

	* Makefile.am, configure.ac: Added posix signal test
	* psxsignal01/Makefile.am, psxsignal01/init.c,
	psxsignal01/psxsignal01.scn, psxsignal01/system.h,
	psxsignal01/task1.c: New files.

2007-12-17	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add test for sysconf().
	* psxsysconf/.cvsignore, psxsysconf/Makefile.am, psxsysconf/init.c,
	psxsysconf/psxsysconf.scn, psxsysconf/system.h: New files.

2007-12-17	Joel Sherrill <joel.sherrill@OARcorp.com>
