@@ -7,7 +7,7 @@ ACLOCAL_AMFLAGS = -I ../aclocal
 SUBDIRS = psxhdrs psx01 psx02 psx03 psx04 psx05 psx06 psx07 psx08 psx09 \
     psx10 psx11 psx12 psx13 psx14 psxcleanup psxtime psxtimer01 psxtimer02 \
     psxcancel psxbarrier01 psxmsgq01 psxrwlock01 psxsem01 psxspin01 \
-    psxenosys psxsignal01 psxsysconf psxualarm
+    psxenosys psxsignal01 psxsysconf psxualarm psxfatal01 psxfatal02
 
 ## File IO tests
 SUBDIRS += psxfile01 psxreaddir psxstat psxmount psx13 psxchroot01 
@@ -17,6 +17,9 @@ SUBDIRS += psxfile01 psxreaddir psxstat psxmount psx13 psxchroot01
 if HAS_NETWORKING
 SUBDIRS += psxrdwrv
 endif
+
+DIST_SUBDIRS = $(SUBDIRS) psxfatal_support
+EXTRA_DIST = psxfatal_support/init.c psxfatal_support/system.h
 
 
 include $(top_srcdir)/../automake/subdirs.am
