@@ -1,0 +1,1 @@
+Fatal error (POSIX API Init thread create failure -- no memory for stack) hit
