@@ -1,5 +1,14 @@
 2008-01-31	Joel Sherrill <joel.sherrill@OARcorp.com>
 
+	* Makefile.am, configure.ac: New tests.
+	* psxfatal01/.cvsignore, psxfatal01/Makefile.am,
+	psxfatal01/psxfatal01.scn, psxfatal01/testcase.h,
+	psxfatal02/.cvsignore, psxfatal02/Makefile.am,
+	psxfatal02/psxfatal02.scn, psxfatal02/testcase.h,
+	psxfatal_support/init.c, psxfatal_support/system.h: New files.
+
+2008-01-31	Joel Sherrill <joel.sherrill@OARcorp.com>
+
 	* Makefile.am, configure.ac: Add psx14 to exercise POSIX API specific
 	portions of Object Services added to API.
 	* psx14/.cvsignore, psx14/Makefile.am, psx14/init.c, psx14/psx14.scn,
